--- a/src/modali.css
+++ b/src/modali.css
@@ -36,7 +36,7 @@
 
 .modali-header {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   padding: 1.5rem 1.5rem .5rem 1.5rem;
 }
 
@@ -84,6 +84,7 @@
 
 .modali-open {
   overflow: hidden;
+  padding-right: 15px;
 }
 
 /* Size Classes */
