--- a/src/modali.css
+++ b/src/modali.css
@@ -10,7 +10,9 @@
 }
 
 .modali-wrapper {
+  display: inline-table;
   position: fixed;
+  padding: .5rem;
   top: 0;
   left: 0;
   z-index: 1050;
@@ -47,6 +49,7 @@
 
 .modali-close-button {
   padding: 1rem;
+  background: white;
   margin: -1rem -1rem -1rem auto;
   font-size: 1.4rem;
   font-weight: 700;
@@ -82,9 +85,15 @@
   justify-content: flex-end;
 }
 
+@media (min-width: 1025px) {
+  .modali-open {
+    overflow: hidden;
+    padding-right: 15px;
+  }
+}
+
 .modali-open {
   overflow: hidden;
-  padding-right: 15px;
 }
 
 /* Size Classes */
